<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@color/material_white"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingTop="32dp"
        android:paddingRight="32dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/human_color"/>


        <EditText
            android:id="@+id/edtEmail"
            style="@style/EdtitextInput"
            android:layout_marginTop="32dp"
            android:drawableLeft="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="60"
            android:padding="14dp" />

        <EditText
            android:id="@+id/edtPassword"
            style="@style/EdtitextInput"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:drawableLeft="@drawable/ic_lock"
            android:inputType="textPassword"
            android:maxLength="16"
            android:padding="14dp" />

        <Button
            android:id="@+id/btnSignIn"
            style="@style/ButtonPurple"
            android:layout_marginTop="32dp"
            android:text="@string/sign_in" />


        <Button
            android:id="@+id/btnRegisterUser"
            style="@style/ButtonTransparent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_user" />


    </LinearLayout>

</LinearLayout>